<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentational.fragment.fragmentCalc.CalcFragment">
    
    <data>
        <variable
            name="event"
            type="com.example.timebase.presentational.fragment.fragmentCalc.CalcPresenterContract.EventListener" />
            <variable name="stringValue" type="String"/>
    </data>
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/tvOperation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="number"
            android:padding="30dp"
            android:selection="@{stringValue.length()}"
            android:singleLine="true"
            android:text="@={stringValue}"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="1000+1500" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TableLayout
            android:id="@+id/tableNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2">

            <TableRow
                android:layout_weight="1"
                android:gravity="bottom">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:text="@string/btn7"
                    android:textStyle="bold"
                    android:onClick="@{() -> event.clickListener(@string/btn7)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:text="@string/btn8"
                    android:textStyle="bold"
                    android:onClick="@{() -> event.clickListener(@string/btn8)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:text="@string/btn9"
                    android:textStyle="bold"
                    android:onClick="@{() -> event.clickListener(@string/btn9)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="bottom">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn4"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/btn4)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn5"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/btn5)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn6"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/btn6)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="bottom">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn1"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/btn1)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn2"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/btn2)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn3"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/btn3)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="bottom">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn0"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/btn0)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnTochka"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_tochka"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/btn_tochka)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/result"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> event.clickListener(@string/result)}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>



        <android.support.constraint.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.74" />


        <LinearLayout
            android:id="@+id/lloperation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center"
                android:background="@drawable/ic_backspace_black_24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/operDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/division"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:onClick="@{() -> event.clickListener(@string/division)}"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/operUM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/um"
                android:background="@android:color/transparent"
                android:onClick="@{() -> event.clickListener(@string/um)}"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/operMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:background="@android:color/transparent"
                android:onClick="@{() -> event.clickListener(@string/minus)}"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/operSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:background="@android:color/transparent"
                android:onClick="@{() -> event.clickListener(@string/plus)}"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <android.support.constraint.Guideline
            android:id="@+id/guidelineVerticalTvRes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvRes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvOperation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineVerticalTvRes"
            tools:ignore="RtlSymmetry"
            tools:text="2500" />

    </android.support.constraint.ConstraintLayout>

</layout>