<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentational.fragment.timer_fragment">

    <data>

        <variable
            name="event"
            type="com.example.timebase.presentational.fragment.timer_fragment.TimerPresenterContract.EventListener" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimer">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                android:onClick="@{()-> event.startTimer()}"
                android:text="@string/start_time" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnPause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                android:onClick="@{()-> event.pauseTimer()}"
                android:text="@string/pause_time" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnStop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                android:onClick="@{()-> event.stopTimer()}"
                android:text="@string/stop_time" />
        </TableRow>

    </android.support.constraint.ConstraintLayout>
</layout>